# stocks-bi

./: README.md
Frontend/: .env  Dockerfile  (+14 more)
backend/stocks_api/: Cargo.toml  TESTING.md
backend/stocks_api/.sqlx/: query-0995f5ff0143cf85f794b2e8f82c9370ae43a2c44fde712ad5be65ebc3b10a47.json  query-31ebd733c82f14d81818f2317e7984b441092a7d3d20fb8d8566c74fa0c8bdca.json  query-3d5a0f60b85f79dfa7a593e232b8f266c06acc65f2a8c2838aeaac1ea159af8b.json  query-644ca8bd2071890b9469c82078858f3535710a4fd5d5a46c008db622798614c5.json  query-8d7d13ffa1b608241569a599543ed9e989d88167773e1acb7350101488281a45.json  query-c1c333ed19e6fc231924eb499e9f9e941e0593ee740b8d1d7e52ceed82680ddc.json  query-c8f9a120056d7901d3cfb971f1b181708ae2e05287a87bfac66bd52da6bf65d2.json  query-dac72afc7a5c328c2f6dc770712d801a944ac89753674d1f523e9290606ea31f.json  query-e8746a3d9de4b956c26de316cfae0f3aca70b3be79df966dc561bb31500d8c1a.json  query-f24ae7ad794fb7b1c16f73ea0273891e6802a08d043f4d9bd7ca21ef88362eb6.json
backend/stocks_api/migrations/: V001__init.sql  V003__timestamptz.sql  V004__supplier.sql  V005__restock_enhancements.sql  V006__remove_unique_productprices.sql  V007__product_status_with_trigger.sql  V2__indexes.sql
backend/stocks_api/src/: lib.rs  main.rs  openapi.rs
backend/stocks_api/src/common/: error_codes.rs  mod.rs  responses.rs  security.rs
backend/stocks_api/src/features/: mod.rs
backend/stocks_api/src/features/auth/: dto.rs  handlers.rs  middleware.rs  mod.rs  router.rs  services.rs
backend/stocks_api/src/features/global_kpis/: dto.rs  handlers.rs  mod.rs  router.rs  services.rs
(+233 files in other folders)
