[package]
name    = "stocks_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum           = "0.7"
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
sqlx           = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid" , "rust_decimal"] }
dotenvy        = "0.15"
base64ct       = "<1.8.0"
refinery       = { version = "0.8", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
anyhow         = "1"
rust_decimal   = { version = "1.0", features = ["serde", "db-tokio-postgres"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "decimal_float"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
rand            = "0.8"
bcrypt = "0.15"
jsonwebtoken = "9"
once_cell = "1.19"
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dev-dependencies]
mockall = "0.12"